画像に使っていたルート相対パスを修正しました。

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="container">
         <div class="header-container">
             <h1 class="header-logo">
-                <a href="https://www.nri.com/jp"><img src="/images/logomark1.png" class="logomark" alt="NRIロゴマーク"></a>
+                <a href="https://www.nri.com/jp"><img src="images/logomark1.png" class="logomark" alt="NRIロゴマーク"></a>
             </h1>
             <ul class="header-nav1">
                 <li><a href="#">ナレッジ・インサイト</a></li>
@@ -52,9 +52,9 @@
             <div class="sns-share">
                 <!-- 右寄せ -->
                 <ul class="sns-icon">
-                    <li><a href=""><img src="/images/icon-facebook.svg" alt="facebook"></a></li>
-                    <li><a href=""><img src="/images/icon-twitter.svg" alt="twitter"></a></li>
-                    <li><a href=""><img src="/images/icon-linkedin.svg" alt="linkedin"></a></li>
+                    <li><a href=""><img src="images/icon-facebook.svg" alt="facebook"></a></li>
+                    <li><a href=""><img src="images/icon-twitter.svg" alt="twitter"></a></li>
+                    <li><a href=""><img src="images/icon-linkedin.svg" alt="linkedin"></a></li>
                 </ul>
             </div>
         </section>
@@ -62,7 +62,7 @@
             <h2 class="strategy">NRIのデジタルビジネス戦略</h2>
             <p>NRI では、企業の DX に向けた取り組みについて、既存ビジネスの業務プロセス変革に寄与する DX を「DX1.0」、デジタルで新しいビジネスモデルそのものを生み出す DX を「DX2.0」と定義しています。</p>
             <p>DX を実現するためには、業務プロセス変革やビジネスモデル創造、そして、それらを実現する IT を同時並行で、共に議論しながら、かつ、スピーディーに実装できる戦略パートナーが必要です。NRI は、コンサルティングと IT ソリューションの人材と機能を併せ持ち、お客さまと併走し、お客さまと仮説検証を繰り返しながらビジネスを創出する「コンソリューション」の提供を強みとして、DX の実現を推進します。</p>
-            <img src="/images/strategy.jpg" class="strategy-img" alt="NRIの強み">
+            <img src="images/strategy.jpg" class="strategy-img" alt="NRIの強み">
             <a class="DX-pdfbtn" href="" target="_blank">
             デジタルが開く近未来（NRIのDX）<br>
             （4.06MB）
@@ -83,9 +83,9 @@
             <div class="sns-share">
                 <!-- 右寄せ -->
                 <ul class="sns-icon">
-                    <li><a href=""><img src="/images/icon-facebook.svg" alt="facebook"></a></li>
-                    <li><a href=""><img src="/images/icon-twitter.svg" alt="twitter"></a></li>
-                    <li><a href=""><img src="/images/icon-linkedin.svg" alt="linkedin"></a></li>
+                    <li><a href=""><img src="images/icon-facebook.svg" alt="facebook"></a></li>
+                    <li><a href=""><img src="images/icon-twitter.svg" alt="twitter"></a></li>
+                    <li><a href=""><img src="images/icon-linkedin.svg" alt="linkedin"></a></li>
                 </ul>
             </div>
         </section>
@@ -144,9 +144,9 @@
             <p>Follow Us</p>
             <!-- 中央ぞろえ -->
             <ul class="sns-icon-bottom">
-                <li><a href=""><img src="/images/icon-facebook.svg" alt="facebook"></a></li>
-                <li><a href=""><img src="/images/icon-twitter.svg" alt="twitter"></a></li>
-                <li><a href=""><img src="/images/icon-linkedin.svg" alt="linkedin"></a></li>
+                <li><a href=""><img src="images/icon-facebook.svg" alt="facebook"></a></li>
+                <li><a href=""><img src="images/icon-twitter.svg" alt="twitter"></a></li>
+                <li><a href=""><img src="images/icon-linkedin.svg" alt="linkedin"></a></li>
             </ul>
         </div>
         <section class="sitenav">
