CSSの修正を行いました。

--- a/html-nri/index.html
+++ b/html-nri/index.html
@@ -18,8 +18,8 @@
                 <a href="https://www.nri.com/jp"><img src="images/logomark1.png" class="logomark" alt="NRIロゴマーク"></a>
             </h1>
             <ul class="header-nav1">
-                <li><a href="#">ナレッジ・インサイト</a></li>
-                <li><a href="#">ソリューション・サービス</a></li>
+                <li><a href="#">ナレッジ･インサイト</a></li>
+                <li><a href="#">ソリューション•サービス</a></li>
                 <li><a href="#">サステナビリティ</a></li>
                 <li><a href="#">ニュース</a></li>
                 <li><a href="#">企業情報</a></li>
@@ -27,9 +27,9 @@
                 <li><a href="#">採用情報</a></li>
             </ul>
             <ul class="header-nav2"><!-- 本来は<button>？ -->
-                <li><a href="#"><img src="images/glass.svg" alt="サイト内検索" class="sns-image"></a></li>
-                <li><a href="#"><img src="images/earth.svg" alt="言語選択" class="sns-image"></a></li>
-                <li><a href="#"><img src="images/hambarger.png" alt="ハンバーガーメニュー" class="sns-image"></a></li>
+                <li><a href="#" class="gl-ea"><img src="images/glass.svg" alt="サイト内検索" class="sns-image"></a></li>
+                <li><a href="#" class="gl-ea"><img src="images/earth.svg" alt="言語選択" class="sns-image"></a></li>
+                <li><a href="#" class="hamberger"><img src="images/hamburgermenu_120234.png" alt="ハンバーガーメニュー" ></a></li>
             </ul>
         </div>
         </div>
