CSSに関してご指摘箇所の修正

--- a/html-nri/index.html
+++ b/html-nri/index.html
@@ -81,12 +81,12 @@
             </div>
             <div class="NRI-strongpoint">
                 <h3>NRIの強み</h3>
-                <a href="https://www.nri.com/jp/company/whats/history" class="link-strong">NRIの歩みと持続的な成長</a>
-                <a href="https://www.nri.com/jp/company/whats/story01" class="link-strong">問題発見から問題解決まで</a>
-                <a href="https://www.nri.com/jp/company/whats/story02" class="link-strong">強固な顧客基盤</a>
-                <a href="https://www.nri.com/jp/company/whats/story03" class="link-strong">ビジネスモデルの特徴</a>
-                <a href="https://www.nri.com/jp/company/whats/story04" class="link-strong">人材が支えるNRI</a>
-                <a href="https://www.nri.com/jp/company/whats/story05" class="link-strong">業界トップクラスの収益力</a>
+                <a href="https://www.nri.com/jp/company/whats/history" class="link-strong1">NRIのあゆみと持続的な成長</a>
+                <a href="https://www.nri.com/jp/company/whats/story01" class="link-strong3">問題発見から問題解決まで</a>
+                <a href="https://www.nri.com/jp/company/whats/story02" class="link-strong3">強固な顧客基盤</a>
+                <a href="https://www.nri.com/jp/company/whats/story03" class="link-strong2">ビジネスモデルの特徴</a>
+                <a href="https://www.nri.com/jp/company/whats/story04" class="link-strong2">人材が支えるNRI</a>
+                <a href="https://www.nri.com/jp/company/whats/story05" class="link-strong2">業界トップクラスの収益力</a>
             </div>
             <div class=" float-clear">
                 <div class="sns-share1">
@@ -160,7 +160,9 @@
                     </ul>
                 </div>
             </div>
+            <div class="back-pagebtn">
             <a href="https://www.nri.com/jp/company" class="back-page">前のページに戻る</a>
+            </div>
         </section>
         <div class="sns-share-bottom">
             <!-- 中央ぞろえ -->
@@ -171,7 +173,9 @@
                 <li><a href=""><img src="images/icon-linkedin.svg" alt="linkedin"></a></li>
             </ul>
         </div>
+
         <section class="sitenav">
+            <div class="nav-group1">
             <div class="nav1">
                 <p><a href="#">ナレッジ・インサイト</a></p>
                 <ul>
@@ -212,6 +216,8 @@
                     <li><a href="#">イベント</a></li>
                 </ul>
             </div>
+            </div>
+            <div class="nav-group2">
             <div class="nav1">
                 <p><a href="#">企業情報</a></p>
                 <ul>
@@ -243,6 +249,7 @@
                 <p><a href="#">メディア関係者の皆様へ</a></p>
                 <p><a href="#">ビジネスパートナーの皆様へ</a></p>
                 <p><a href="#">サイトマップ</a></p>
+            </div>
             </div>
         </section>
     </div>
