Follow　Us下部分の修正。

--- a/html-nri/index.html
+++ b/html-nri/index.html
@@ -19,7 +19,7 @@
             </h1>
             <ul class="header-nav1">
                 <li><a href="#">ナレッジ･インサイト</a></li>
-                <li><a href="#">ソリューション•サービス</a></li>
+                <li><a href="#">ソリューション･サービス</a></li>
                 <li><a href="#">サステナビリティ</a></li>
                 <li><a href="#">ニュース</a></li>
                 <li><a href="#">企業情報</a></li>
@@ -29,7 +29,7 @@
             <ul class="header-nav2"><!-- 本来は<button>？ -->
                 <li><a href="#" class="gl-ea"><img src="images/glass.svg" alt="サイト内検索" class="sns-image"></a></li>
                 <li><a href="#" class="gl-ea"><img src="images/earth.svg" alt="言語選択" class="sns-image"></a></li>
-                <li><a href="#" class="hamberger"><img src="images/hamburgermenu_120234.png" alt="ハンバーガーメニュー" ></a></li>
+                <li><a href="#" class="hamberger"><img src="images/hamburgermenu.png" alt="ハンバーガーメニュー" ></a></li>
             </ul>
         </div>
         </div>
@@ -175,6 +175,7 @@
         </div>
 
         <section class="sitenav">
+            <div class="nav-group">
             <div class="nav-group1">
             <div class="nav1">
                 <p><a href="#">ナレッジ・インサイト</a></p>
@@ -249,6 +250,7 @@
                 <p><a href="#">メディア関係者の皆様へ</a></p>
                 <p><a href="#">ビジネスパートナーの皆様へ</a></p>
                 <p><a href="#">サイトマップ</a></p>
+            </div>
             </div>
             </div>
         </section>
