コードチェッカーをかけ、修正しました。

--- a/html-kaguya/index.html
+++ b/html-kaguya/index.html
@@ -25,13 +25,12 @@
     </ul>
     </div>
 </header>
-<article>
-    <main>
-        <section class="keyvisual">
+<main>
+    <section class="keyvisual">
             <!--  background-image  -->
             <h2>We propose a life.</h2>
-        </section>
-        <section class="main-container">
+    </section>
+    <section class="main-container">
             <div class="concept">
                 <!--  float  -->
                 <img src="image/concept.png" srcset="image/concept.png 1x,
@@ -66,7 +65,7 @@
                 <form action="#" method="POST" id="contact-form">
                     <p><input type="text" value="" placeholder="お名前"></p>
                     <p><input type="email" value="" placeholder="メールアドレス"></p>
-                    <p><textarea value="" placeholder="お問い合わせ内容"></textarea></p>
+                    <p><textarea  placeholder="お問い合わせ内容"></textarea></p>
                     <p class="submit-p"><input type="submit" value="SEND" id="submit" name="submit"></p>
                 </form>
             </div>
@@ -76,9 +75,8 @@
                 <p>詳しくは詳細ページをご覧ください。</p>
                 <a href="ricruite/index.html">view more</a>
             </div>
-        </section>
-    </main>
-</article>
+    </section>
+</main>
 <footer>
     <div class="footer-container">
         <div class="f-maincontainer">
