--- a/html-kaguya/index.html
+++ b/html-kaguya/index.html
@@ -11,9 +11,10 @@
 <header>
     <section class="header-container">
         <!--  float  -->
-        <h1 class="logo-header"><img src="image/logo_header.png" srcset="image/logo_header.png 1x,
-                                                                         image/logo_header@2x.png 2x"
-                                     alt="logomark-h">
+        <h1 class="logo-header">
+            <img src="image/logo_header.png" srcset="image/logo_header.png 1x,
+                                                　　　image/logo_header@2x.png 2x"
+                                     　　　　　alt="logomark-h">
         </h1>
         <ul class="header-nav">
             <!--  float  -->
