--- a/html-kaguya/index.html
+++ b/html-kaguya/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ja">
+
 <head>
     <meta charset="utf-8">
     <meta name="descriprion" content="家具屋｜Home画面">
@@ -7,46 +8,45 @@
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/main.css">
 </head>
+
 <body>
-<header>
-    <section class="header-container">
-        <!--  float  -->
-        <h1 class="logo-header">
-            <img src="image/logo_header.png" srcset="image/logo_header.png 1x,
-                                                　　　image/logo_header@2x.png 2x"
-                                     　　　　　alt="logomark-h">
-        </h1>
-        <ul class="header-nav">
+    <header>
+        <section class="header-container">
             <!--  float  -->
-            <li>HOME</li>
-            <li><a href="news/index.html">NEWS</a></li>
-            <li><a href="recruite/index.html">RECRUIT</a></li>
-            <li><a href="contact/index.html">CONTACT</a></li>
-        </ul>
-    </section>
-</header>
-<main>
-    <section class="keyvisual">
-        <!--  background-image  -->
-        <h2>We propose a life.</h2>
-    </section>
-    <div class="main-container">
-        <section class="concept">
-            <!--  float  -->
-            <img src="image/concept.png" srcset="image/concept.png 1x,
-                                                 image/concept@2x.png 2x"
-                                         alt="conceptimg">
-            <h3>暮らしを提案する。</h3>
-            <p>私たちは、家具を売るのではなく、お客様の理想とする <br>
-                「暮らし」を提案します。 <br>
-                仕事で疲れた後に帰りたくなる、 <br>
-                今日も１日頑張ろうと思える、 <br>
-                そんな空間をお客様と一緒に作り上げていくのが私たちの仕事です。
-            </p>
+            <h1 class="logo-header">
+                <img src="image/logo_header.png" srcset="image/logo_header.png 1x,
+                                                　　　image/logo_header@2x.png 2x" 　　　　　alt="logomark-h">
+            </h1>
+            <ul class="header-nav">
+                <!--  float  -->
+                <li>HOME</li>
+                <li><a href="news/index.html">NEWS</a></li>
+                <li><a href="recruite/index.html">RECRUIT</a></li>
+                <li><a href="contact/index.html">CONTACT</a></li>
+            </ul>
         </section>
-        <section class="news">
-            <h3>NEWS</h3>
-            <ul class="pickup-news">
+    </header>
+    <main>
+        <section class="keyvisual">
+            <!--  background-image  -->
+            <h2>We propose a life.</h2>
+        </section>
+        <div class="main-container">
+            <section class="concept">
+                <!--  float  -->
+                <img src="image/concept.png" srcset="image/concept.png 1x,
+                                                 image/concept@2x.png 2x" alt="conceptimg">
+                <h3>暮らしを提案する。</h3>
+                <p>私たちは、家具を売るのではなく、お客様の理想とする <br>
+                    「暮らし」を提案します。 <br>
+                    仕事で疲れた後に帰りたくなる、 <br>
+                    今日も１日頑張ろうと思える、 <br>
+                    そんな空間をお客様と一緒に作り上げていくのが私たちの仕事です。
+                </p>
+            </section>
+            <section class="news">
+                <h3>NEWS</h3>
+                <ul class="pickup-news">
                     <!--  backgroud-image,float  -->
                     <li class="news1">アームストロングのカウチ入荷</li>
                     <li class="news2">アームストロングのチェア再入荷</li>
@@ -60,46 +60,44 @@
                 <p>詳しくはカタログをご覧ください。</p>
                 <a href="catalog/catalog.pdf">カタログをダウンロード</a>
             </div>
-        <section class="contact">
-            <h3>CONTACT</h3>
-            <form action="#" method="POST" id="contact-form">
-                <p><input type="text" placeholder="お名前"></p>
-                <p><input type="email" placeholder="メールアドレス"></p>
-                <p><textarea  placeholder="お問い合わせ内容"></textarea></p>
-                <p class="submit-p"><input type="submit" value="SEND" id="submit" name="submit"></p>
-            </form>
-        </section>
-        <section class="recruit">
-            <h3>RECRUIT</h3>
-            <p>現在Staffを募集しております。</p>
-            <p>詳しくは詳細ページをご覧ください。</p>
-            <a href="ricruite/index.html">view more</a>
-        </section>
-    </div>
-</main>
-<footer>
-    <div class="footer-container">
-        <div class="f-maincontainer">
-            <!--  float  -->
-            <div class="logo-footer">
-                <img src="image/logo_footer.png" srcset="image/logo_footer.png 1x,
-                                                         image/logo_footer@2x.png 2x"
-                                                 alt="logomark-f">
-            </div>
-            <ul class="footer-nav">
-                <!--  float  -->
-                <li>HOME</li>
-                <li><a href="news/index.html">NEWS</a></li>
-                <li><a href="recruite/index.html">RECRUIT</a></li>
-                <li><a href="contact/index.html">CONTACT</a></li>
-            </ul>
+            <section class="contact">
+                <h3>CONTACT</h3>
+                <form action="#" method="POST" id="contact-form">
+                    <p><input type="text" placeholder="お名前"></p>
+                    <p><input type="email" placeholder="メールアドレス"></p>
+                    <p><textarea placeholder="お問い合わせ内容"></textarea></p>
+                    <p class="submit-p"><input type="submit" value="SEND" id="submit" name="submit"></p>
+                </form>
+            </section>
+            <section class="recruit">
+                <h3>RECRUIT</h3>
+                <p>現在Staffを募集しております。</p>
+                <p>詳しくは詳細ページをご覧ください。</p>
+                <a href="ricruite/index.html">view more</a>
+            </section>
         </div>
-    </div>
-    <div class="copyright">
-        <small>©HTMLCSS.code</small>
-    </div>
-</footer>
+    </main>
+    <footer>
+        <div class="footer-container">
+            <div class="f-maincontainer">
+                <!--  float  -->
+                <div class="logo-footer">
+                    <img src="image/logo_footer.png" srcset="image/logo_footer.png 1x,
+                                                         image/logo_footer@2x.png 2x" alt="logomark-f">
+                </div>
+                <ul class="footer-nav">
+                    <!--  float  -->
+                    <li>HOME</li>
+                    <li><a href="news/index.html">NEWS</a></li>
+                    <li><a href="recruite/index.html">RECRUIT</a></li>
+                    <li><a href="contact/index.html">CONTACT</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="copyright">
+            <small>©HTMLCSS.code</small>
+        </div>
+    </footer>
 </body>
-</html>                
 
-    
+</html>
