タグの修正

--- a/html-kaguya/index.html
+++ b/html-kaguya/index.html
@@ -54,12 +54,12 @@
                 </ul>
                 <a href="news/index.html">view more</a>
             </section>
-            <div class="catalog">
+            <section class="catalog">
                 <h3>公式カタログ</h3>
                 <p>様々なスタイルをご提案いたします。オーダーメイドも可能です。 </p>
                 <p>詳しくはカタログをご覧ください。</p>
                 <a href="catalog/catalog.pdf">カタログをダウンロード</a>
-            </div>
+            </section>
             <section class="contact">
                 <h3>CONTACT</h3>
                 <form action="#" method="POST" id="contact-form">
@@ -79,7 +79,7 @@
     </main>
     <footer>
         <div class="footer-container">
-            <div class="f-maincontainer">
+            <section class="f-maincontainer">
                 <!--  float  -->
                 <div class="logo-footer">
                     <img src="image/logo_footer.png" srcset="image/logo_footer.png 1x,
@@ -92,7 +92,7 @@
                     <li><a href="recruite/index.html">RECRUIT</a></li>
                     <li><a href="contact/index.html">CONTACT</a></li>
                 </ul>
-            </div>
+            </section>
         </div>
         <div class="copyright">
             <small>©HTMLCSS.code</small>
