--- a/html-kaguya/index.html
+++ b/html-kaguya/index.html
@@ -15,7 +15,7 @@
             <!--  float  -->
             <h1 class="logo-header">
                 <img src="image/logo_header.png" srcset="image/logo_header.png 1x,
-                                                　　　image/logo_header@2x.png 2x" 　alt="logomark-h">
+                                                　　　image/logo_header@2x.png 2x" alt="logomark">
             </h1>
             <ul class="header-nav">
                 <!--  float  -->
@@ -35,7 +35,7 @@
             <section class="concept">
                 <!--  float  -->
                 <img src="image/concept.png" srcset="image/concept.png 1x,
-                                                 image/concept@2x.png 2x"　alt="conceptimg">
+                                                 image/concept@2x.png 2x" alt="conceptimg">
                 <h3>暮らしを提案する。</h3>
                 <p>私たちは、家具を売るのではなく、お客様の理想とする <br>
                     「暮らし」を提案します。 <br>
@@ -79,7 +79,7 @@
     </main>
     <footer>
         <div class="footer-container">
-            <section class="f-maincontainer">
+            <div class="f-maincontainer">
                 <!--  float  -->
                 <div class="logo-footer">
                     <img src="image/logo_footer.png" srcset="image/logo_footer.png 1x,
@@ -92,7 +92,7 @@
                     <li><a href="recruite/index.html">RECRUIT</a></li>
                     <li><a href="contact/index.html">CONTACT</a></li>
                 </ul>
-            </section>
+            </div>
         </div>
         <div class="copyright">
             <small>©HTMLCSS.code</small>
