header画像の表示を修正しました。

--- a/html-kaguya/index.html
+++ b/html-kaguya/index.html
@@ -15,7 +15,7 @@
             <!--  float  -->
             <h1 class="logo-header">
                 <img src="image/logo_header.png" srcset="image/logo_header.png 1x,
-                                                　　　image/logo_header@2x.png 2x" alt="logomark">
+                                                　　　    image/logo_header@2x.png 2x"  alt="logomark-h">
             </h1>
             <ul class="header-nav">
                 <!--  float  -->
@@ -35,7 +35,7 @@
             <section class="concept">
                 <!--  float  -->
                 <img src="image/concept.png" srcset="image/concept.png 1x,
-                                                 image/concept@2x.png 2x" alt="conceptimg">
+                                                     image/concept@2x.png 2x" alt="conceptimg">
                 <h3>暮らしを提案する。</h3>
                 <p>私たちは、家具を売るのではなく、お客様の理想とする <br>
                     「暮らし」を提案します。 <br>
@@ -83,7 +83,7 @@
                 <!--  float  -->
                 <div class="logo-footer">
                     <img src="image/logo_footer.png" srcset="image/logo_footer.png 1x,
-                                                         image/logo_footer@2x.png 2x" alt="logomark-f">
+                                                             image/logo_footer@2x.png 2x" alt="logomark-f">
                 </div>
                 <ul class="footer-nav">
                     <!--  float  -->
