--- a/html-kaguya/recruite/index.html
+++ b/html-kaguya/recruite/index.html
@@ -36,11 +36,9 @@
                 <table class="recruit-information">
                     <caption>採用情報</caption>
                     <tr>
-                        <th rowspan="3">
-                            <h3>販売員</h3>
-                        </th>
+                        <th rowspan="3">販売員</th>
                         <td>
-                            <h4>仕事内容</h4>
+                            <p>仕事内容</p>
                             <ul class="work-contents">
                                 <li>海外から輸入している家具の販売</li>
                                 <li>商品管理</li>
@@ -50,23 +48,21 @@
                     </tr>
                     <tr>
                         <td>
-                            <h4>時給</h4>
+                            <p>時給</p>
                             <p>1,200円〜</p>
                         </td>
                     </tr>
                     <tr>
                         <td>
-                            <h4>勤務時間</h4>
+                            <p>勤務時間</p>
                             <p>10:00 - 19:00（1時間休憩）</p>
                             <p>週3〜5日</p>
                         </td>
                     </tr>
                     <tr>
-                        <th rowspan="3">
-                            <h3>家具職人</h3>
-                        </th>
+                        <th rowspan="3">家具職人</th>
                         <td>
-                            <h4>仕事内容</h4>
+                            <p>仕事内容</p>
                             <ul class="work-contents">
                                 <li>家具作成に必要な材料の発注</li>
                                 <li>商品管理</li>
@@ -78,13 +74,13 @@
                     </tr>
                     <tr>
                         <td>
-                            <h4>月給</h4>
+                            <p>月給</p>
                             <p>35万円〜</p>
                         </td>
                     </tr>
                     <tr>
                         <td>
-                            <h4>勤務時間</h4>
+                            <p>勤務時間</p>
                             <p>10:00 - 19:00（1時間休憩）</p>
                             <p>週3〜5日</p>
                         </td>
