--- a/html-kaguya/index.html
+++ b/html-kaguya/index.html
@@ -6,6 +6,7 @@
     <meta name="descriprion" content="家具屋｜Home画面">
     <title>家具屋　Home</title>
     <link rel="stylesheet" href="css/normalize.css">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
 </head>
 
@@ -15,7 +16,7 @@
             <!--  float  -->
             <h1 class="logo-header">
                 <img src="image/logo_header.png" srcset="image/logo_header.png 1x,
-                                                         image/logo_header@2x.png 2x"  alt="logomark-h">
+                                                         image/logo_header@2x.png 2x" alt="logomark-h">
             </h1>
             <ul class="header-nav">
                 <!--  float  -->
@@ -29,35 +30,45 @@
     <main>
         <section class="keyvisual">
             <!--  background-image  -->
-            <h2>We propose a life.</h2>
+            <div class="keyconcept">
+                <h2>We propose a life.</h2>
+            </div>
         </section>
         <div class="main-container">
             <section class="concept">
                 <!--  float  -->
                 <img src="image/concept.png" srcset="image/concept.png 1x,
                                                      image/concept@2x.png 2x" alt="conceptimg">
-                <h3>暮らしを提案する。</h3>
-                <p>私たちは、家具を売るのではなく、お客様の理想とする <br>
-                    「暮らし」を提案します。 <br>
-                    仕事で疲れた後に帰りたくなる、 <br>
-                    今日も１日頑張ろうと思える、 <br>
-                    そんな空間をお客様と一緒に作り上げていくのが私たちの仕事です。
-                </p>
+                <div class="concept-contents">
+                    <h3>暮らしを提案する。</h3>
+                    <p>私たちは、家具を売るのではなく、お客様の理想とする <br>
+                        「暮らし」を提案します。 <br>
+                        仕事で疲れた後に帰りたくなる、 <br>
+                        今日も１日頑張ろうと思える、 <br>
+                        そんな空間をお客様と一緒に作り上げていくのが私たちの仕事です。
+                    </p>
+                </div>
             </section>
             <section class="news">
                 <h3>NEWS</h3>
                 <ul class="pickup-news">
                     <!--  backgroud-image,float  -->
-                    <li class="news1">アームストロングのカウチ入荷</li>
-                    <li class="news2">アームストロングのチェア再入荷</li>
-                    <li class="news3">アームストロングのテーブル入荷</li>
+                    <li class="news1">
+                        <p>アームストロングのカウチ入荷</p>
+                    </li>
+                    <li class="news2">
+                        <p>アームストロングのチェア再入荷</p>
+                    </li>
+                    <li class="news3">
+                        <p>アームストロングのテーブル入荷</p>
+                    </li>
                 </ul>
                 <a href="news/index.html">view more</a>
             </section>
             <section class="catalog">
                 <h3>公式カタログ</h3>
-                <p>様々なスタイルをご提案いたします。オーダーメイドも可能です。 </p>
-                <p>詳しくはカタログをご覧ください。</p>
+                <p>様々なスタイルをご提案いたします。オーダーメイドも可能です。 <br>
+                    詳しくはカタログをご覧ください。</p>
                 <a href="catalog/catalog.pdf">カタログをダウンロード</a>
             </section>
             <section class="contact">
@@ -71,28 +82,26 @@
             </section>
             <section class="recruit">
                 <h3>RECRUIT</h3>
-                <p>現在Staffを募集しております。</p>
-                <p>詳しくは詳細ページをご覧ください。</p>
+                <p>現在Staffを募集しております。<br>
+                    詳しくは詳細ページをご覧ください。</p>
                 <a href="ricruite/index.html">view more</a>
             </section>
         </div>
     </main>
     <footer>
         <div class="footer-container">
-            <div class="f-maincontainer">
-                <!--  float  -->
-                <div class="logo-footer">
-                    <img src="image/logo_footer.png" srcset="image/logo_footer.png 1x,
+            <!--  float  -->
+            <div class="logo-footer">
+                <img src="image/logo_footer.png" srcset="image/logo_footer.png 1x,
                                                              image/logo_footer@2x.png 2x" alt="logomark-f">
-                </div>
-                <ul class="footer-nav">
-                    <!--  float  -->
-                    <li>HOME</li>
-                    <li><a href="news/index.html">NEWS</a></li>
-                    <li><a href="recruite/index.html">RECRUIT</a></li>
-                    <li><a href="contact/index.html">CONTACT</a></li>
-                </ul>
             </div>
+            <ul class="footer-nav">
+                <!--  float  -->
+                <li>HOME</li>
+                <li><a href="news/index.html">NEWS</a></li>
+                <li><a href="recruite/index.html">RECRUIT</a></li>
+                <li><a href="contact/index.html">CONTACT</a></li>
+            </ul>
         </div>
         <div class="copyright">
             <small>©HTMLCSS.code</small>
