全体のレイアウトのズレを修正しました。

--- a/html-kaguya/index.html
+++ b/html-kaguya/index.html
@@ -29,9 +29,11 @@
     </header>
     <main>
         <section class="keyvisual">
+            <div class="keyvisual-background">
             <!--  background-image  -->
-            <div class="keyconcept">
-                <h2>We propose a life.</h2>
+                <div class="keyconcept">
+                    <h2>We propose a life.</h2>
+                </div>
             </div>
         </section>
         <div class="main-container">
