Home以外のCSS作成と、それに伴うHTMLの修正を行いました。

--- a/html-kaguya/contact/index.html
+++ b/html-kaguya/contact/index.html
@@ -21,15 +21,17 @@
                 <!--  float  -->
                 <li><a href="../index.html">HOME</a></li>
                 <li><a href="../news/index.html">NEWS</a></li>
-                <li><a href="../recruite/index.html">RECRUIT</a></li>
+                <li><a href="../recruit/index.html">RECRUIT</a></li>
                 <li>CONTACT</li>
             </ul>
         </section>
     </header>
     <main>
-        <section class="c-keyvisual">
+        <section class="nrc-keyvisual">
+            <div class="c-keyvisual-background">
             <!--  background-image  -->
-            <h2>CONTACT</h2>
+                <h2>CONTACT</h2>
+            </div>
         </section>
         <div class="c-main-container">
             <section class="contact-title">
@@ -54,9 +56,9 @@
             <ul class="footer-nav">
                 <!--  float  -->
                 <li><a href="../index.html">HOME</a></li>
-                <li><a href="../news/index.html">NEWS</a></li>
-                <li><a href="../recruite/index.html">RECRUIT</a></li>
-                <li>CONTACT</li>
+                <li class="padleft-nav"><a href="../news/index.html">NEWS</a></li>
+                <li class="padleft-nav"><a href="../recruit/index.html">RECRUIT</a></li>
+                <li class="padleft-nav">CONTACT</li>
             </ul>
         </div>
         <div class="copyright">
