--- a/html-kaguya/recruit/index.html
+++ b/html-kaguya/recruit/index.html
@@ -27,9 +27,11 @@
         </section>
     </header>
     <main>
-        <section class="r-keyvisual">
+        <section class="nrc-keyvisual">
             <!--  background-image  -->
+            <div class="r-keyvisual-background">
             <h2>RECRUIT</h2>
+            </div>
         </section>
         <div class="r-main-container">
             <div class="table-wrapper">
@@ -49,14 +51,14 @@
                     <tr>
                         <td>
                             <p>時給</p>
-                            <p>1,200円〜</p>
+                            <p><small>1,200円〜</small></p>
                         </td>
                     </tr>
                     <tr>
                         <td>
                             <p>勤務時間</p>
-                            <p>10:00 - 19:00（1時間休憩）</p>
-                            <p>週3〜5日</p>
+                            <p><small>10:00 - 19:00（1時間休憩）</small></p>
+                            <p><small>週3〜5日</small></p>
                         </td>
                     </tr>
                     <tr>
@@ -75,14 +77,14 @@
                     <tr>
                         <td>
                             <p>月給</p>
-                            <p>35万円〜</p>
+                            <p><small>35万円〜</small></p>
                         </td>
                     </tr>
                     <tr>
                         <td>
                             <p>勤務時間</p>
-                            <p>10:00 - 19:00（1時間休憩）</p>
-                            <p>週3〜5日</p>
+                            <p><small>10:00 - 19:00（1時間休憩）</small></p>
+                            <p><small>週3〜5日</small></p>
                         </td>
                     </tr>
                 </table>
@@ -99,9 +101,9 @@
             <ul class="footer-nav">
                 <!--  float  -->
                 <li><a href="../index.html">HOME</a></li>
-                <li><a href="../news/index.html">NEWS</a></li>
-                <li>RECRUIT</li>
-                <li><a href="../contact/index.html">CONTACT</a></li>
+                <li class="padleft-nav"><a href="../news/index.html">NEWS</a></li>
+                <li class="padleft-nav">RECRUIT</li>
+                <li class="padleft-nav"><a href="../contact/index.html">CONTACT</a></li>
             </ul>
         </div>
         <div class="copyright">
