レビューいただいた点を修正しました。

--- a/html-kaguya/contact/index.html
+++ b/html-kaguya/contact/index.html
@@ -6,6 +6,7 @@
     <meta name="descriprion" content="家具屋｜contact お問い合わせ">
     <title>家具屋　contact</title>
     <link rel="stylesheet" href="../css/normalize.css">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/main.css">
 </head>
 
