--- a/html-kaguya/index.html
+++ b/html-kaguya/index.html
@@ -22,7 +22,7 @@
                 <!--  float  -->
                 <li>HOME</li>
                 <li><a href="news/index.html">NEWS</a></li>
-                <li><a href="recruite/index.html">RECRUIT</a></li>
+                <li><a href="recruit/index.html">RECRUIT</a></li>
                 <li><a href="contact/index.html">CONTACT</a></li>
             </ul>
         </section>
