--- a/html-kaguya/recruit/index.html
+++ b/html-kaguya/recruit/index.html
@@ -6,6 +6,7 @@
     <meta name="descriprion" content="家具屋｜recruit 採用情報">
     <title>家具屋　recruit</title>
     <link rel="stylesheet" href="../css/normalize.css">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/main.css">
 </head>
 
@@ -37,56 +38,58 @@
             <div class="table-wrapper">
                 <table class="recruit-information">
                     <caption>採用情報</caption>
-                    <tr>
-                        <th rowspan="3">販売員</th>
-                        <td>
+                    <tbody>
+                    <tr class="t-recruit1">
+                        <th rowspan="3" class="recruit-title1">販売員</th>
+                        <td class="recruit1">
                             <p>仕事内容</p>
-                            <ul class="work-contents">
-                                <li>海外から輸入している家具の販売</li>
-                                <li>商品管理</li>
-                                <li>オーダーメイド家具の発注</li>
+                            <ul>
+                                <li>・海外から輸入している家具の販売</li>
+                                <li>・商品管理</li>
+                                <li>・オーダーメイド家具の発注</li>
                             </ul>
                         </td>
                     </tr>
-                    <tr>
-                        <td>
+                    <tr class="t-recruit2">
+                        <td class="recruit2">
                             <p>時給</p>
-                            <p><small>1,200円〜</small></p>
+                            <p class="work-contents">1,200円〜</p>
                         </td>
                     </tr>
-                    <tr>
-                        <td>
+                    <tr class="t-recruit3">
+                        <td class="working-time">
                             <p>勤務時間</p>
-                            <p><small>10:00 - 19:00（1時間休憩）</small></p>
-                            <p><small>週3〜5日</small></p>
+                            <p class="work-contents">10:00 - 19:00（1時間休憩）<br>
+                            週3〜5日</p>
                         </td>
                     </tr>
-                    <tr>
-                        <th rowspan="3">家具職人</th>
-                        <td>
+                    <tr class="t-recruit4">
+                        <th rowspan="3" class="recruit-title2">家具職人</th>
+                        <td class="recruit4">
                             <p>仕事内容</p>
-                            <ul class="work-contents">
-                                <li>家具作成に必要な材料の発注</li>
-                                <li>商品管理</li>
-                                <li>オーダーメイド家具の相談</li>
-                                <li>オーダーメイド家具のディレクション</li>
-                                <li>オーダーメイド家具の製作</li>
+                            <ul>
+                                <li>・家具作成に必要な材料の発注</li>
+                                <li>・商品管理</li>
+                                <li>・オーダーメイド家具の相談</li>
+                                <li>・オーダーメイド家具のディレクション</li>
+                                <li>・オーダーメイド家具の製作</li>
                             </ul>
                         </td>
                     </tr>
-                    <tr>
-                        <td>
+                    <tr class="t-recruit2">
+                        <td class="recruit2">
                             <p>月給</p>
-                            <p><small>35万円〜</small></p>
+                            <p class="work-contents">35万円〜</p>
                         </td>
                     </tr>
-                    <tr>
-                        <td>
+                    <tr class="t-recruit3">
+                        <td class="working-time">
                             <p>勤務時間</p>
-                            <p><small>10:00 - 19:00（1時間休憩）</small></p>
-                            <p><small>週3〜5日</small></p>
+                            <p class="work-contents">10:00 - 19:00（1時間休憩）<br>
+                            週3〜5日</p>
                         </td>
                     </tr>
+                    </tbody>
                 </table>
             </div>
         </div>
