テーブル部分のレイアウト調整を行いました。

--- a/html-kaguya/recruit/index.html
+++ b/html-kaguya/recruit/index.html
@@ -39,53 +39,53 @@
                 <table class="recruit-information">
                     <caption>採用情報</caption>
                     <tbody>
-                    <tr class="t-recruit1">
-                        <th rowspan="3" class="recruit-title1">販売員</th>
-                        <td class="recruit1">
+                    <tr>
+                        <th rowspan="3">販売員</th>
+                        <td>
                             <p>仕事内容</p>
                             <ul>
-                                <li>・海外から輸入している家具の販売</li>
-                                <li>・商品管理</li>
-                                <li>・オーダーメイド家具の発注</li>
+                                <li>海外から輸入している家具の販売</li>
+                                <li>商品管理</li>
+                                <li>オーダーメイド家具の発注</li>
                             </ul>
                         </td>
                     </tr>
-                    <tr class="t-recruit2">
-                        <td class="recruit2">
+                    <tr>
+                        <td>
                             <p>時給</p>
-                            <p class="work-contents">1,200円〜</p>
+                            <p class="work-contents1">1,200円〜</p>
                         </td>
                     </tr>
-                    <tr class="t-recruit3">
-                        <td class="working-time">
+                    <tr>
+                        <td>
                             <p>勤務時間</p>
-                            <p class="work-contents">10:00 - 19:00（1時間休憩）<br>
+                            <p class="work-contents2">10:00 - 19:00（1時間休憩）<br>
                             週3〜5日</p>
                         </td>
                     </tr>
-                    <tr class="t-recruit4">
-                        <th rowspan="3" class="recruit-title2">家具職人</th>
+                    <tr>
+                        <th rowspan="3">家具職人</th>
                         <td class="recruit4">
                             <p>仕事内容</p>
                             <ul>
-                                <li>・家具作成に必要な材料の発注</li>
-                                <li>・商品管理</li>
-                                <li>・オーダーメイド家具の相談</li>
-                                <li>・オーダーメイド家具のディレクション</li>
-                                <li>・オーダーメイド家具の製作</li>
+                                <li>家具作成に必要な材料の発注</li>
+                                <li>商品管理</li>
+                                <li>オーダーメイド家具の相談</li>
+                                <li>オーダーメイド家具のディレクション</li>
+                                <li>オーダーメイド家具の製作</li>
                             </ul>
                         </td>
                     </tr>
-                    <tr class="t-recruit2">
-                        <td class="recruit2">
+                    <tr>
+                        <td>
                             <p>月給</p>
-                            <p class="work-contents">35万円〜</p>
+                            <p class="work-contents1">35万円〜</p>
                         </td>
                     </tr>
-                    <tr class="t-recruit3">
-                        <td class="working-time">
+                    <tr>
+                        <td>
                             <p>勤務時間</p>
-                            <p class="work-contents">10:00 - 19:00（1時間休憩）<br>
+                            <p class="work-contents2">10:00 - 19:00（1時間休憩）<br>
                             週3〜5日</p>
                         </td>
                     </tr>
