Home部分のレスポンシブ対応を実装しました。

--- a/html-kaguya/index.html
+++ b/html-kaguya/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="descriprion" content="家具屋｜Home画面">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>家具屋　Home</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&display=swap" rel="stylesheet">
@@ -32,8 +33,8 @@
             <div class="keyvisual-background">
             <!--  background-image  -->
                 <div class="keyconcept">
-                    <h2>We propose a life.</h2>
-                </div>
+                    <h2><span>We</span> <span>propose</span> <span>a life.</span></h2>
+            </div>
             </div>
         </section>
         <div class="main-container">
@@ -43,11 +44,11 @@
                                                      image/concept@2x.png 2x" alt="conceptimg">
                 <div class="concept-contents">
                     <h3>暮らしを提案する。</h3>
-                    <p>私たちは、家具を売るのではなく、お客様の理想とする <br>
-                        「暮らし」を提案します。 <br>
-                        仕事で疲れた後に帰りたくなる、 <br>
-                        今日も１日頑張ろうと思える、 <br>
-                        そんな空間をお客様と一緒に作り上げていくのが私たちの仕事です。
+                    <p><span>私たちは、家具を売るのではなく、</span><span>お客様の理想とする</span> <br>
+                        <span>「暮らし」を提案します。</span> <br>
+                        <span>仕事で疲れた後に帰りたくなる、</span> <br>
+                        <span>今日も１日頑張ろうと思える、</span> <br>
+                        <span>そんな空間をお客様と一緒に作り上げていくのが</span><span>私たちの仕事です。</span>
                     </p>
                 </div>
             </section>
@@ -86,7 +87,7 @@
                 <h3>RECRUIT</h3>
                 <p>現在Staffを募集しております。<br>
                     詳しくは詳細ページをご覧ください。</p>
-                <a href="ricruite/index.html">view more</a>
+                <a href="ricruit/index.html">view more</a>
             </section>
         </div>
     </main>
