href部分でtypoしていた部分を修正致しました。

--- a/html-kaguya/index.html
+++ b/html-kaguya/index.html
@@ -87,7 +87,7 @@
                 <h3>RECRUIT</h3>
                 <p>現在Staffを募集しております。<br>
                     詳しくは詳細ページをご覧ください。</p>
-                <a href="ricruit/index.html">view more</a>
+                <a href="recruit/index.html">view more</a>
             </section>
         </div>
     </main>
