--- a/html-kaguya/contact/index.html
+++ b/html-kaguya/contact/index.html
@@ -40,6 +40,9 @@
                 <h3>お問い合わせ</h3>
                 <p>オーダー家具や在庫状況のお問い合わせは下記フォームから承っております。</p>
             </section>
+            <section class="contact-title-sp">
+                <h3>CONTACT</h3>
+            </section>
             <form action="#" method="POST" id="contact-form">
                 <p><input type="text" placeholder="お名前"></p>
                 <p><input type="email" placeholder="メールアドレス"></p>
@@ -52,8 +55,10 @@
         <div class="footer-container">
             <!--  float  -->
             <div class="logo-footer">
-                <img src="../image/logo_footer.png" srcset="../image/logo_footer.png 1x,
-                                                            ../image/logo_footer@2x.png 2x" alt="logomark-f">
+                <a href="../index.html">
+                    <img src="../image/logo_footer.png" srcset="../image/logo_footer.png 1x,
+                                                                ../image/logo_footer@2x.png 2x" alt="logomark-f">
+                </a>
             </div>
             <ul class="footer-nav">
                 <!--  float  -->
