--- a/html-kaguya/recruit/index.html
+++ b/html-kaguya/recruit/index.html
@@ -99,8 +99,10 @@
         <div class="footer-container">
             <!--  float  -->
             <div class="logo-footer">
-                <img src="../image/logo_footer.png" srcset="../image/logo_footer.png 1x,
-                                                            ../image/logo_footer@2x.png 2x" alt="logomark-f">
+                <a href="../index.html">
+                    <img src="../image/logo_footer.png" srcset="../image/logo_footer.png 1x,
+                                                                ../image/logo_footer@2x.png 2x" alt="logomark-f">
+                </a>
             </div>
             <ul class="footer-nav">
                 <!--  float  -->
