--- a/html-kaguya/index.html
+++ b/html-kaguya/index.html
@@ -1,115 +1,155 @@
 <!DOCTYPE html>
 <html lang="ja">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="descriprion" content="家具屋｜Home画面" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>家具屋 Home</title>
+    <link rel="stylesheet" href="css/normalize.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="css/main.css" />
+  </head>
 
-<head>
-    <meta charset="utf-8">
-    <meta name="descriprion" content="家具屋｜Home画面">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>家具屋　Home</title>
-    <link rel="stylesheet" href="css/normalize.css">
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/main.css">
-</head>
-
-<body>
+  <body class="fadeout">
     <header>
-        <section class="header-container">
-            <!--  float  -->
-            <h1 class="logo-header">
-                <img src="image/logo_header.png" srcset="image/logo_header.png 1x,
-                                                         image/logo_header@2x.png 2x" alt="logomark-h">
-            </h1>
-            <ul class="header-nav">
-                <!--  float  -->
-                <li>HOME</li>
-                <li><a href="news/index.html">NEWS</a></li>
-                <li><a href="recruit/index.html">RECRUIT</a></li>
-                <li><a href="contact/index.html">CONTACT</a></li>
-            </ul>
-        </section>
+      <section class="header-container">
+        <!--  float  -->
+        <h1 class="logo-header">
+          <img
+            src="image/logo_header.png"
+            srcset="image/logo_header.png 1x, image/logo_header@2x.png 2x"
+            alt="logomark-h"
+          />
+        </h1>
+        <!-- ハンバーガーメニュー -->
+        <!-- 参考：https://nodoame.net/archives/8771 -->
+        <div class="navToggle">
+          <span></span><span></span><span></span>
+      </div>
+        <nav class="header-nav">
+        <ul>
+          <!--  float  -->
+          <li><a href="index.html">HOME</a></li>
+          <li><a href="news/index.html" class="page-transition">NEWS</a></li>
+          <li>
+            <a href="recruit/index.html" class="page-transition">RECRUIT</a>
+          </li>
+          <li>
+            <a href="contact/index.html" class="page-transition">CONTACT</a>
+          </li>
+        </ul>
+        </nav>
+      </section>
     </header>
     <main>
-        <section class="keyvisual">
-            <div class="keyvisual-background">
-            <!--  background-image  -->
-                <div class="keyconcept">
-                    <h2><span>We</span> <span>propose</span> <span>a life.</span></h2>
-            </div>
-            </div>
-        </section>
-        <div class="main-container">
-            <section class="concept">
-                <!--  float  -->
-                <img src="image/concept.png" srcset="image/concept.png 1x,
-                                                     image/concept@2x.png 2x" alt="conceptimg">
-                <div class="concept-contents">
-                    <h3>暮らしを提案する。</h3>
-                    <p><span>私たちは、家具を売るのではなく、</span><span>お客様の理想とする</span> <br>
-                        <span>「暮らし」を提案します。</span> <br>
-                        <span>仕事で疲れた後に帰りたくなる、</span> <br>
-                        <span>今日も１日頑張ろうと思える、</span> <br>
-                        <span>そんな空間をお客様と一緒に作り上げていくのが</span><span>私たちの仕事です。</span>
-                    </p>
-                </div>
-            </section>
-            <section class="news">
-                <h3>NEWS</h3>
-                <ul class="pickup-news">
-                    <!--  backgroud-image,float  -->
-                    <li class="news1">
-                        <p>アームストロングのカウチ入荷</p>
-                    </li>
-                    <li class="news2">
-                        <p>アームストロングのチェア再入荷</p>
-                    </li>
-                    <li class="news3">
-                        <p>アームストロングのテーブル入荷</p>
-                    </li>
-                </ul>
-                <a href="news/index.html">view more</a>
-            </section>
-            <section class="catalog">
-                <h3>公式カタログ</h3>
-                <p>様々なスタイルをご提案いたします。オーダーメイドも可能です。 <br>
-                    詳しくはカタログをご覧ください。</p>
-                <a href="catalog/catalog.pdf">カタログをダウンロード</a>
-            </section>
-            <section class="contact">
-                <h3>CONTACT</h3>
-                <form action="#" method="POST" id="contact-form">
-                    <p><input type="text" placeholder="お名前"></p>
-                    <p><input type="email" placeholder="メールアドレス"></p>
-                    <p><textarea placeholder="お問い合わせ内容"></textarea></p>
-                    <p class="submit-p"><input type="submit" value="SEND" id="submit" name="submit"></p>
-                </form>
-            </section>
-            <section class="recruit">
-                <h3>RECRUIT</h3>
-                <p>現在Staffを募集しております。<br>
-                    詳しくは詳細ページをご覧ください。</p>
-                <a href="recruit/index.html">view more</a>
-            </section>
+      <section class="keyvisual">
+        <div class="keyvisual-background">
+          <!--  background-image  -->
+          <div class="keyconcept">
+            <h2><span>We</span> <span>propose</span> <span>a life.</span></h2>
+          </div>
         </div>
+      </section>
+      <div class="main-container">
+        <section class="concept">
+          <!--  float  -->
+          <img
+            src="image/concept.png"
+            srcset="image/concept.png 1x, image/concept@2x.png 2x"
+            alt="conceptimg"
+          />
+          <div class="concept-contents">
+            <h3>暮らしを提案する。</h3>
+            <p>
+              <span>私たちは、家具を売るのではなく、</span
+              ><span>お客様の理想とする</span> <br />
+              <span>「暮らし」を提案します。</span> <br />
+              <span>仕事で疲れた後に帰りたくなる、</span> <br />
+              <span>今日も１日頑張ろうと思える、</span> <br />
+              <span>そんな空間をお客様と一緒に作り上げていくのが</span
+              ><span>私たちの仕事です。</span>
+            </p>
+          </div>
+        </section>
+        <section class="news">
+          <h3>NEWS</h3>
+          <ul class="pickup-news">
+            <!--  backgroud-image,float  -->
+            <li class="news1">
+              <p><span class = "background-news">アームストロングのカウチ入荷</span></p>
+            </li>
+            <li class="news2">
+              <p><span class = "background-news">アームストロングのチェア再入荷</span></p>
+            </li>
+            <li class="news3">
+              <span class = "background-news"><p>アームストロングのテーブル入荷</span></p>
+            </li>
+          </ul>
+          <a href="news/index.html" class="page-transition">view more</a>
+        </section>
+        <section class="catalog">
+          <h3>公式カタログ</h3>
+          <p>
+            様々なスタイルをご提案いたします。オーダーメイドも可能です。 <br />
+            詳しくはカタログをご覧ください。
+          </p>
+          <a href="catalog/catalog.pdf">カタログをダウンロード</a>
+        </section>
+        <section class="contact">
+          <h3>CONTACT</h3>
+          <form action="#" method="POST" id="contact-form">
+            <p><input type="text" placeholder="お名前" /></p>
+            <p><input type="email" placeholder="メールアドレス" /></p>
+            <p><textarea placeholder="お問い合わせ内容"></textarea></p>
+            <p class="submit-p">
+              <input type="submit" value="SEND" id="submit" name="submit" />
+            </p>
+          </form>
+        </section>
+        <section class="recruit">
+          <h3>RECRUIT</h3>
+          <p>
+            現在Staffを募集しております。<br />
+            詳しくは詳細ページをご覧ください。
+          </p>
+          <a href="recruit/index.html" class="page-transition">view more</a>
+        </section>
+      </div>
     </main>
     <footer>
-        <div class="footer-container">
-            <!--  float  -->
-            <div class="logo-footer">
-                <img src="image/logo_footer.png" srcset="image/logo_footer.png 1x,
-                                                             image/logo_footer@2x.png 2x" alt="logomark-f">
-            </div>
-            <ul class="footer-nav">
-                <!--  float  -->
-                <li>HOME</li>
-                <li class="padleft-nav"><a href="news/index.html">NEWS</a></li>
-                <li class="padleft-nav"><a href="recruit/index.html">RECRUIT</a></li>
-                <li class="padleft-nav"><a href="contact/index.html">CONTACT</a></li>
-            </ul>
+      <div class="footer-container">
+        <!--  float  -->
+        <div class="logo-footer">
+          <img
+            src="image/logo_footer.png"
+            srcset="image/logo_footer.png 1x, image/logo_footer@2x.png 2x"
+            alt="logomark-f"
+          />
         </div>
-        <div class="copyright">
-            <small>©HTMLCSS.code</small>
-        </div>
+        <nav class="footer-nav">
+        <ul>
+          <!--  float  -->
+          <li>HOME</li>
+          <li class="padleft-nav">
+            <a href="news/index.html" class="page-transition">NEWS</a>
+          </li>
+          <li class="padleft-nav">
+            <a href="recruit/index.html" class="page-transition">RECRUIT</a>
+          </li>
+          <li class="padleft-nav">
+            <a href="contact/index.html" class="page-transition">CONTACT</a>
+          </li>
+        </ul>
+        </nav>
+      </div>
+      <div class="copyright">
+        <small>©HTMLCSS.code</small>
+      </div>
     </footer>
-</body>
-
+    <script src="scripts/jquery.min.js"></script>
+    <script src="scripts/script.js"></script>
+  </body>
 </html>
